--- a/src/main/resources/web/g1.html
+++ b/src/main/resources/web/g1.html
@@ -301,6 +301,10 @@
             $("#btn_demo").hide();
             graph.svg.select('#node_RepChain').transition().duration(2000).style({ "fill": "lawngreen" });
             //清除所有入网节点
+
+            // 保持心跳，以保持websocket连接
+            // Tanks Black Eyed Beas :)
+            setInterval(() => {socket.send("Boom boom boom (Gotta get get)")}, 30*1000);
         };
 
         socket.onclose = function() {
